# CAOS_IMGLAB

./: .gitignore  .template-source  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
data/: README.md
data-pipeline/: README.md  requirements-precompute.txt  requirements.txt  sources.yaml
data-pipeline/imglab/: __init__.py  imageset.py  pipeline.py
data-pipeline/imglab/core/: __init__.py  metrics.py
data-pipeline/imglab/io/: __init__.py  image.py
data-pipeline/imglab/methods/: benchmark.py  dictionaries.py  diffusion_strips.py  gabor_fit.py  gaussians_fit.py  inr_train.py  klt_basis.py  primitives_fit.py  rbf_fit.py  symbolic_fit.py  vae_latents.py
data-pipeline/imglab/stages/: __init__.py  fetch_images.py
data/derived/_bench/: index.json
data/derived/_dict/: learned.json  overdct.json
data/derived/_diff/: index.json
data/derived/_gabor/: art_greatwave.json  art_wheatfield.json  art_woodblock.json  astro_deepfield.json  astro_pillars.json  index.json  mathart-julia.json  (+12 more)
data/images/: index.json  sources.lock.json
deploy/: pages.md
docs/: README.md
docs/architecture/: 01_overview.md
docs/cases/: README.md
docs/methods/: README.md
frontend/: copy-data.mjs  index.html  package-lock.json  package.json
frontend/public/: 404.html  CNAME
frontend/src/: imglab.css  main.tsx
scripts/: README.md  check_artifacts.py  precompute.ps1  precompute.sh
tests/: test_imageset.py
tools/visual-verify/: package-lock.json  package.json  shoot-arch.mjs  shoot-live-all.mjs  shoot-pages.mjs  shoot-tab.mjs  shoot.mjs
(+157 files in other folders)
