# ImageLab offline engine package (ADR-0057). The two data contracts, the staged pipeline, the lane gate and
# the manifest/trace are the FROZEN base; the per-representation engines (transforms, frames, primitives,
# neural fields, symbolic, generative) are the rework surface, pinned in data-pipeline/requirements.txt and
# documented in docs/frameworks/.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "imglab"
# PEP 440 form of the display version X.XX.XXX (see CHANGELOG.md + imglab.__version__).
version = "0.5.0"
description = "ImageLab offline data-pipeline: represent one image across the spectrum of mathematics (transforms, frames, primitives, implicit neural fields, symbolic formula art, generative latents) and bake compact web artifacts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Felipe Santibanez-Leal" }]
dependencies = ["numpy>=1.26"]

[tool.setuptools.packages.find]
where = ["data-pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# Single-letter names are standard math notation here (matrices A, D; coordinates x, y; frequencies u, v);
# intentional domain notation, not ambiguous.
ignore = ["E741"]
